--- a/slides/crispr.html
+++ b/slides/crispr.html
@@ -1,4 +1,4 @@
-<h2>CRISPR-Cas9 genome editing adds another powerful set of DNA parts to the genome editing tool box</h2>
+<h2>CRISPR opens up synbio on human cells</h2>
 <ul class="inline-list">
   <li>Disrupt</li>
   <li>Insert</li>
@@ -7,6 +7,6 @@
   <li>Inhibit</li>
   <li>Activate</li>
 </ul>
-<img src="images/crispr-experiments.jpg"/>
+<img src="images/FA_Cas9_Fig2_Cas9forGenomeEditing.png"/>
   
 
